--- a/201303/cross-origin/server1/views/layout.jade
+++ b/201303/cross-origin/server1/views/layout.jade
@@ -1,7 +1,7 @@
 doctype 5
 html
   head
-    title= title
+    title Cross-origin Examples
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
