--- a/host-server/views/layout.jade
+++ b/host-server/views/layout.jade
@@ -2,6 +2,6 @@ doctype 5
 html
   head
     title Cross-origin Examples
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/201303/css/style.css')
   body
     block content
